--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -103,3 +103,52 @@ nav{
     
     margin-right: 30px;
 }
+
+.about-container{
+    width: 71%;
+    max-width: 1140px;
+    background-color: #FFF8F3;
+    margin: 0px auto;
+    padding: 131px 156px;
+
+}
+
+.About{
+    padding: 130px 230px 0px 230px;
+}
+
+.about-container h2{
+    text-align: center;
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+    margin-bottom: 30px;
+}
+
+#about-text{
+    text-align: center;
+    font-size: 18;
+    line-height: 30px;
+    color: #757575;
+    margin-bottom: 30px;
+}
+
+.card-container{
+    display: flex;
+    justify-content: space-around;
+}
+
+.info-card p{
+    text-align: center;
+    font-size: 20px;
+    line-height: 30px;
+    color: #757575;
+}
+
+.info-card h4{
+    text-align: center;
+    font-size: 20px;
+    line-height: 30px;
+    font-weight: bold;
+    color: #474747;
+}
