--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -152,3 +152,64 @@ nav{
     font-weight: bold;
     color: #474747;
 }
+
+.skill{
+    width: 71%;
+    max-width: 1140px;
+    /* border: 1px solid red; */
+    margin: 0px auto;
+    padding-top: 130px;
+}
+
+.skill-text p{
+    text-align: center;
+    font-size: 18px;
+    line-height: 30px;
+    color: #757575;
+    margin-bottom: 50px;
+}
+
+.skill-text h3{
+    text-align: center;
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+    margin-bottom: 30px;
+}
+
+.skill-text{
+    width: 827px;
+    margin: 0px auto;
+}
+
+.skill-card-container{
+    display: flex;
+    gap: 24px;
+}
+
+.skill-card{
+    /* height: 377px; */
+    /* border: 1px solid red; */
+    padding: 30px;
+    max-width:267px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.093);
+    
+}
+
+.skill-card h4{
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: #181818;
+}
+
+.skill-card p{
+    font-size: 16px;
+    line-height: 28px;
+    color: #757575;
+}
+
+.skill-card img{
+    height: 44px;
+    margin-bottom: 30px;
+}
